# geo-raster

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
lib/: band_op.py  cache_mag.py  cal_metrics.py  calculate_agreement_metrics.py  color_table.py  config.py  csv_util.py  density_map.py  environ_mag.py  file_mag.py  file_unzip.py  filter_landsat_images.py  find_empty_dir.py  generate_list.py  geo_raster.py  geo_raster_ex.py  global_task.py  landsat.py  landsat_dataset.py  landsat_tiles_csv2png.py  landsat_tiles_csv2shp.py  libpg.py  linear_regress.py  logging_util.py  metadata.py  modis_util.py  multi_task.py  obj.py  pg_connect.py  progress.py  progress_percentage.py  rasterize_band.py  retrieve_landsat_tiles.py  run_commands.py  sampling_images.py  sentinel2_dataset.py  setup_util.py  sh_kill.py  stat_band.py  tree.py  (+1 more)
mod/: agg_band.pyx  filter_band.pyx  geo_base_c.pyx  geo_raster_c.pyx  geo_raster_ex_c.pyx  lc_agg_module.pyx
util/: aggregate_grid.py  burn_bands.py  calculate_agreement_metrics.py  clip_raster_by_shp.py  compare_lists.py  convert_geotiff.py  convert_gz_tif.py  copy_s3_files.py  copy_s3_rasters.py  copy_task_tiles.py  create_task_tiles.py  execute_cmd.py  extract_raster_by_mask.py  extract_region.py  extract_tile_records.py  filter_raster_noises.py  generate_list.py  generate_tiles_extent.py  global_sin_mosiac.py  kill_p.py  landsat_tiles_csv2png.py  landsat_tiles_csv2shp.py  map_raster_file.py  mask_band.py  mosiac_continent.py  mosiac_images.py  points_csv2shp.py  raster_extent2shp.py  sh_cmd.py  (+16 more)
(+43 files in other folders)
